--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   text-align: center;
 }
 
-.App-logo {
+.App-logo :hover {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
 }
@@ -31,6 +31,10 @@
   }
 }
 
-h1 :hover {
-  color: red;
+.testIgal :hover {
+  color: rgb(153, 0, 255);
+}
+
+.testIgal {
+  color: gold;
 }
